# test_task_like_htop

./: CMakeLists.txt  README.md  a.out  data.h  data_miner.cpp  data_miner.h  htop.cpp  htop.h  main  measurement.h  viewer.cpp  viewer.h  worker.h  worker_common_cpu.cpp  worker_common_cpu.h  worker_core_cpu.cpp  worker_core_cpu.h
src/: README.md  data.h  htop.h  main.cpp  worker.h  worker_core_cpu.cpp  worker_core_cpu.h
